Adjustments to PyramidProgress and visual fixes

--- a/src/components/Card/ResponsiveCard.module.css
+++ b/src/components/Card/ResponsiveCard.module.css
@@ -14,6 +14,7 @@
   margin: var(--spacing-medium) auto;
   gap: var(--spacing-medium);
   padding: 5px;
+  z-index: 35;
 }
 
 .card.reverse {
@@ -67,8 +68,15 @@
 
   .card.reverse {
     flex-direction: column;
+  } 
+  
+  .text {
+    hyphens: auto; 
+    word-spacing: -0.05em;
   }
 
+
+ 
   .image {
     width: 100%;
     border-right: none;
