--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  bottom: var(--spacing-large);
-  right: var(--spacing-large);
+  bottom: 3%;
+  right: var(--spacing-small);
   z-index: var(--z-index-header);
   cursor: pointer;
   text-decoration: none;
@@ -55,3 +55,4 @@
 .handIcon {
   font-size: calc(var(--font-size-large));
 }
+
