--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -9,6 +9,7 @@
   background-color: var(--background-color);
   color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
+  width: 90%;
 }
 
 .textContainer {
@@ -105,12 +106,14 @@
   .section {
     flex-direction: column;
     align-items: center;
-    text-align: center;
     padding: var(--spacing-medium);
+    width: 100%;
   }
 
   .textContainer {
     align-items: center;
+    hyphens: auto;
+    word-spacing: -0.05em;
   }
 
   .techStack {
