--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -29,7 +29,7 @@
  align-items: center;
  justify-content: center;
  width: 100%;
- 
+ z-index: 35;
 }
 
 .moreDetailsButton {
@@ -61,7 +61,7 @@
   border-radius: var(--border-radius-medium);
   box-shadow: 0 4px 12px rgb(0 0 0 / 10%);
   padding: var(--spacing-medium);
-  width: 90%;
+  width: 94%;
   max-width: 1200px; 
   margin: auto;
   display: flex;
@@ -70,6 +70,12 @@
 }
 
 @media (width <= 768px) {
+  .home{
+    width: 98%;
+    padding: var(--spacing-small);
+   
+  }
+  
   .moreDetailsButton {
     width: 100%; 
     padding: var(--spacing-medium);
@@ -78,6 +84,5 @@
   .rightSection {
     display: none; 
   }
-
 
 }
