--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -6,8 +6,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  
-
+  z-index: 30;
 }
 
 .cardsContainer {
@@ -20,9 +19,9 @@
 }
 
 .card {
-  width: 100%;
+  width: 95%;
   max-width: 800px;
-  min-height: 300px;
+  min-height: 400px;
   font-size: var(--font-size-large);
   display: flex;
   align-items: center;
