--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -6,7 +6,7 @@ body, html {
   box-sizing: border-box;
   height: 100%;
   line-height: var(--line-height-large);
- 
+  -webkit-text-size-adjust: 100%;
 }
 
 
