improve header and section

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -130,6 +130,9 @@
   }
 
   .role{
+    display: block; 
     white-space: pre-line;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
 }
