--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -7,8 +7,9 @@
   padding: var(--spacing-medium);
   background-color: var(--primary-color);
   color: white;
-  width: 100%;
+  width: 106%;
   box-shadow: var(--shadow-color);
+  box-sizing: border-box;
 }
 
 .container {
@@ -73,21 +74,13 @@
 }
 
 @media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    align-items: center;
-   
-  }
-
-  .topSection {
-    flex-direction: column;
-    align-items: center;
-    gap: var(--spacing-small);
-
+  .container, .topSection {
+    width: 100%;
   }
 
   .description {
-    max-width: 98%;
+    width: 100%;
+    
   }
 
   .socialIcons {
