--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   z-index: 30;
+ 
 }
 
 .cardsContainer {
@@ -14,8 +15,10 @@
   flex-flow: column wrap;
   gap: var(--spacing-medium);
   justify-content: center;
+  align-items: center;
   padding: var(--spacing-medium) ;
   flex: 1;
+  width: 100%;
 }
 
 .card {
@@ -26,4 +29,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (width <= 768px) {
+  .cardsContainer {
+    align-self:baseline ;
+  }
+
 }
